--- a/restaurant.html
+++ b/restaurant.html
@@ -209,7 +209,7 @@
   </footer>
 
   <div class="modal">
-    <div class="modal-order">
+    <div class="modal-order  animated zoomIn">
       <div class="modal-header">
         <h3 class="modal-title">Корзина</h3>
         <button class="modal-close">&times;</button>
