--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet" />
 	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/style.css" />
-	<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
+	<link rel="stylesheet"
+		href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 
 <body>
@@ -68,6 +69,8 @@
 							</p>
 					</section>
 				</div>
+				<!-- Swiper pagination -->
+				<div class="swiper-pagination"></div>
 			</div>
 			<section class="restaurants">
 				<div class="section-heading">
@@ -132,50 +135,10 @@
 			</div>
 			<!-- /.modal-header -->
 			<div class="modal-body">
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
-				<div class="food-row">
-					<span class="food-name">Ролл угорь стандарт</span>
-					<strong class="food-price">250 ₽</strong>
-					<div class="food-counter">
-						<button class="counter-button">-</button>
-						<span class="counter">1</span>
-						<button class="counter-button">+</button>
-					</div>
-				</div>
-				<!-- /.foods-row -->
 			</div>
 			<!-- /.modal-body -->
 			<div class="modal-footer">
-				<span class="modal-pricetag">1250 ₽</span>
+				<span class="modal-pricetag"></span>
 				<div class="footer-buttons">
 					<button class="button button-primary">Оформить заказ</button>
 					<button class="button clear-cart">Отмена</button>
@@ -212,7 +175,8 @@
 		</div>
 		<!-- /.modal-dialog -->
 	</div>
-	<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+	<script
+		src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 
